# KDZTool

./: CMakeLists.txt  LICENSE  README.md  dz_builder.cpp  dz_builder.hpp  dz_parser.cpp  dz_parser.hpp  extractor.cpp  extractor.hpp  kdz_builder.cpp  kdz_builder.hpp  kdz_parser.cpp  kdz_parser.hpp  main.cpp  metadata_generator.cpp  metadata_generator.hpp  secure_partition_builder.cpp  secure_partition_builder.hpp  secure_partition_parser.cpp  secure_partition_parser.hpp
common/: md5.cpp  md5.hpp  shared_structure.hpp  thread_pool.hpp  utils.cpp  utils.hpp
